Use checklist for spacing, correct header levels

--- a/src/Hedwig/ClientApp/src/assets/styles/_uswds-theme-custom-styles.scss
+++ b/src/Hedwig/ClientApp/src/assets/styles/_uswds-theme-custom-styles.scss
@@ -491,7 +491,7 @@ $future-step-color: color('base-dark') !default;
 }
 
 .usa-form {
-	h3 {
+	h2, h3 {
 		@include u-margin-top(4);
 		margin-bottom: 0;
 	}
